--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,26 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@stripe/react-stripe-js": "^1.16.4",
-    "@stripe/stripe-js": "^1.46.0",
-    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.2.2",
-    "countries-list": "^2.6.1",
+    "axios": "^1.6.2",
+    "express": "^4.18.2",
     "mdbreact": "^5.2.0",
-    "rc-slider": "^10.1.0",
-    "rc-tooltip": "^5.3.0",
+    "rc-slider": "^10.5.0",
+    "rc-tooltip": "^6.1.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^1.6.6",
+    "react-bootstrap": "^1.6.8",
     "react-dom": "^18.2.0",
-    "react-helmet-async": "^1.3.0",
+    "react-helmet-async": "^2.0.0",
     "react-js-pagination": "^3.0.3",
-    "react-redux": "^8.0.5",
-    "react-router-dom": "^6.6.1",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.1",
-    "redux": "^4.2.0",
+    "react-toastify": "^9.1.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "web-vitals": "^2.1.4"
