--- a/package.json
+++ b/package.json
@@ -1,29 +1,23 @@
 {
-  "name": "revnitro",
+  "name": "jvlcart",
   "version": "1.0.0",
-  "description": "Revnitro Ecommerce",
+  "description": "ecommerce using MERN stack",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon Backend/server.js",
-    "dev": "set NODE_ENV=development&&nodemon Backend/server.js ",
-    "prod": "set NODE_ENV=production&&nodemon Backend/server.js ",
-    "seedr": "node Backend/utils/seedr.js"
+    "start": "nodemon backend/server.js",
+    "dev": "set NODE_ENV=development&&nodemon backend/server.js",
+    "prod": "set NODE_ENV=production&&nodemon backend/server.js",
+    "seeder": "node backend/utils/seeder.js"
   },
-  "keywords": [
-    "Revnitro"
-  ],
-  "author": "Dhinesh",
+  "author": "JV Logesh",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
+    "@reduxjs/toolkit": "^1.9.1",
+    "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.3",
-    "imgur": "^0.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.8.0",
     "multer": "^1.4.5-lts.1",
@@ -32,6 +26,6 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^2.0.20"
   }
 }
